--- a/_tmux.conf
+++ b/_tmux.conf
@@ -13,3 +13,9 @@ set -g status-utf8 on
 unbind C-b
 set -g prefix C-t
 bind C-t send-prefix
+
+# tmux では ESC キーの反応が遅い
+set -s escape-time 0
+
+# キーバインドもvi 
+set-window-option -g mode-keys vi
