[ADD] いろいろ便利な設定を追記した

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -1,10 +1,6 @@
-# | でペインを縦に分割する
-bind | split-window -h
-
-# - でペインを横に分割する
-bind - split-window -v
 # 256色端末を使用する
 set -g default-terminal "screen-256color"
+
 # 日本語環境なら必須
 setw -g utf8 on
 set -g status-utf8 on
@@ -17,3 +13,22 @@ bind C-t send-prefix
 # tmux では ESC キーの反応が遅い
 set -s escape-time 0
 
+# ウィンドウの開始番号を1からにする
+set -g base-index 1
+# ペインの開始番号を1からにする
+setw -g pane-base-index 1
+
+# アクティブなウィンドウをハイライト表示
+setw -g monitor-activity on
+
+# マウスを使えるようにする
+setw -g mode-mouse on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
+
+# Vim 風キーバインドでペイン間を移動する
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
