--- a/_tmux.conf
+++ b/_tmux.conf
@@ -38,3 +38,6 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+
+# For Cordova
+set-option -g default-command "reattach-to-user-namespace -l zsh"
