--- a/_tmux.conf
+++ b/_tmux.conf
@@ -39,5 +39,11 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-# For Cordova
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+case ${OSTYPE} in
+  # For MacOS
+  darwin*)
+    # For Cordova
+    set-option -g default-command "reattach-to-user-namespace -l zsh"
+  ;;
+esac
