[ADD] Vim風に範囲選択できるようにした

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -21,12 +21,6 @@ setw -g pane-base-index 1
 # アクティブなウィンドウをハイライト表示
 setw -g monitor-activity on
 
-# マウスを使えるようにする
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
-
 # Vim 風キーバインドでペイン間を移動する
 bind h select-pane -L
 bind j select-pane -D
@@ -38,5 +32,16 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+
+# Vi キーバインド
+set-window-option -g mode-keys vi
+
+# Prefix+v でコピーモード開始
+bind-key v copy-mode \; display "Copy mode!"
+#bind-key -t vi-copy v begin-selection
+
+# Prefix+p でペースト
+# クリップボードにも保存されているので Cmd-v でもペースト可能
+bind-key p paste-buffer
 
 
