[ADD] ペインを分割してもディレクトリを維持するようにした

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -45,3 +45,8 @@ bind-key v copy-mode \; display "Copy mode!"
 bind-key p paste-buffer
 
 
+# ペイン分割後もディレクトリを維持する
+unbind %
+bind-key % split-window -h -c "#{pane_current_path}"
+unbind '"'
+bind-key '"' split-window -v -c "#{pane_current_path}"
