[ADD] Shift_R overrided F12 it can be launch Guake term easily

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -50,3 +50,11 @@ unbind %
 bind-key % split-window -h -c "#{pane_current_path}"
 unbind '"'
 bind-key '"' split-window -v -c "#{pane_current_path}"
+
+# マウス操作を有効にする
+setw -g mode-mouse on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
+
+
