--- a/_tmux.conf
+++ b/_tmux.conf
@@ -21,29 +21,15 @@ setw -g pane-base-index 1
 # アクティブなウィンドウをハイライト表示
 setw -g monitor-activity on
 
-# Vim 風キーバインドでペイン間を移動する
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# Vimのキーバインドでペインをリサイズする
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-
 # Vi キーバインド
 set-window-option -g mode-keys vi
 
 # Prefix+v でコピーモード開始
 bind-key v copy-mode \; display "Copy mode!"
-#bind-key -t vi-copy v begin-selection
 
 # Prefix+p でペースト
 # クリップボードにも保存されているので Cmd-v でもペースト可能
 bind-key p paste-buffer
-
 
 # ペイン分割後もディレクトリを維持する
 unbind %
@@ -61,6 +47,7 @@ set -g mouse-select-window on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-pain-control' 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
