[ADD] ステータスラインにバッテリーとCPU,ネットワーク接続を追加した

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -27,7 +27,6 @@ set-window-option -g mode-keys vi
 # Prefix+v でコピーモード開始
 bind-key v copy-mode \; display "Copy mode!"
 
-# Prefix+p でペースト
 # クリップボードにも保存されているので Cmd-v でもペースト可能
 bind-key p paste-buffer
 
@@ -43,12 +42,20 @@ set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
 
-# List of plugins
+# ステータスライン
+set -g status-right 'Online: #{online_status}|CPU: #{cpu_percentage} | Batt: #{battery_percentage} | %a %h-%d %H:%M '
+set-option -g status-right-length 90
+# 1秒ごとに更新する
+set-option -g status-interval 1
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-online-status'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
