--- a/neobundle.toml
+++ b/neobundle.toml
@@ -92,3 +92,7 @@ repository = 'gregsexton/gitv'
 [[plugins]]
 repository = 'tpope/vim-fugitive'
 
+# elixir {{{
+[[plugins]]
+repository = 'elixir-lang/vim-elixir'
+
