--- a/neobundle.toml
+++ b/neobundle.toml
@@ -24,6 +24,9 @@ repository = 'Shougo/unite-outline'
 # benry {{{
 
 [[plugins]]
+repository = "tyru/eskk.vim"
+
+[[plugins]]
 repository = "wakatime/vim-wakatime"
 
 [[plugins]]
