tmuxのペイン移動をVimっぽくした

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -36,6 +36,16 @@ bind-key % split-window -h -c "#{pane_current_path}"
 unbind '"'
 bind-key '"' split-window -v -c "#{pane_current_path}"
 
+# Vimっぽくペイン移動する
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+bind-key -r H resize-pane -L 5
+bind-key -r J resize-pane -D 5
+bind-key -r K resize-pane -U 5
+bind-key -r L resize-pane -R 5
+
 # マウス操作を有効にする
 setw -g mode-mouse on
 set -g mouse-select-pane on
