[tmux] tmux2.1に対応した

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -47,10 +47,7 @@ bind-key -r K resize-pane -U 5
 bind-key -r L resize-pane -R 5
 
 # マウス操作を有効にする
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+setw -g mouse on
 
 # ステータスライン
 set -g status-right 'Online: #{online_status}|CPU: #{cpu_percentage} | Batt: #{battery_percentage} | %a %h-%d %H:%M '
