--- a/_tmux.conf
+++ b/_tmux.conf
@@ -5,6 +5,9 @@ set -g default-terminal "screen-256color"
 setw -g utf8 on
 set -g status-utf8 on
 
+# 履歴の最大件数
+set -g history-limit 50000
+
 #プレフィックスをCtrl-bからCtrl-tに変更
 unbind C-b
 set -g prefix C-t
@@ -50,8 +53,21 @@ bind-key -r L resize-pane -R 5
 setw -g mouse on
 
 # ステータスライン
-set -g status-right 'Online: #{online_status}|CPU: #{cpu_percentage} | Batt: #{battery_percentage} | %a %h-%d %H:%M '
-set-option -g status-right-length 90
+set-option -g status-justify left
+set-option -g status-left '#[bg=colour72] #[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #h #[bg=colour236] '
+set-option -g status-left-length 16
+set-option -g status-bg colour237
+set-option -g status-right '#[bg=colour236] #[bg=colour235]#[fg=colour185] #(date "+ %m/%d %a %H:%M:%S") #[bg=colour236] #[bg=colour237] #[bg=colour72] '
+set-option -g status-interval 1
+
+set-option -g pane-active-border-fg colour240
+set-option -g pane-border-fg colour238
+
+set-window-option -g window-status-format '#[bg=colour238]#[fg=colour107] #I #[bg=colour239]#[fg=colour110] #[bg=colour240]#W#[bg=colour239]#[fg=colour195]#F#[bg=colour238] '
+set-window-option -g window-status-current-format '#[bg=colour236]#[fg=colour215] #I #[bg=colour235]#[fg=colour167] #[bg=colour234]#W#[bg=colour235]#[fg=colour195]#F#[bg=colour236] '
+
+set-option -g status-position top
+
 # 1秒ごとに更新する
 set-option -g status-interval 1
 
@@ -64,6 +80,10 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-online-status'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-logging'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'tmux-plugins/tmux-net-speed'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
