--- a/_tmux.conf
+++ b/_tmux.conf
@@ -71,6 +71,9 @@ set-option -g status-position top
 # 1秒ごとに更新する
 set-option -g status-interval 1
 
+# ウィンドウを閉じた時にインデックス番号を振り直す
+set-option -g renumber-windows on
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
