[tmux] ステータスバーをリッチにした

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,12 +49,6 @@ bind-key -r L resize-pane -R 5
 setw -g mouse on
 
 # ステータスライン
-set-option -g status-justify left
-set-option -g status-left '#[bg=colour72] #[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #h #[bg=colour236] '
-set-option -g status-left-length 16
-set-option -g status-bg colour237
-set-option -g status-right '#[bg=colour236] #[bg=colour235]#[fg=colour185] #(date "+ %m/%d %a %H:%M:%S") #[bg=colour236] #[bg=colour237] #[bg=colour72] '
-set-option -g status-interval 1
 
 set-option -g pane-active-border-fg colour240
 set-option -g pane-border-fg colour238
@@ -69,6 +63,33 @@ set-option -g status-interval 1
 
 # ウィンドウを閉じた時にインデックス番号を振り直す
 set-option -g renumber-windows on
+
+# System window by supported OS
+set-option -g set-titles on
+set-option -g set-titles-string "[tmux] #T @ #H"
+
+set-option -g allow-rename off
+
+set-option -g display-time 3500
+
+
+# Reload config file
+bind-key r source-file ~/.tmux.conf\; display-message "[tmux] $HOME/.tmux.conf reloaded!"
+bind-key C-r source-file ~/.tmux.conf\; display-message "[tmux] $HOME/.tmux.conf reloaded!"
+
+# Length left
+set-option -g status-left-length 90
+set-option -g status-right-length 90
+
+# Contents left
+set-option -g status-left '#[fg=white]tmux:[#P]'
+
+# Contents right
+set-option -g status-right "#(tmux show-options -g prefix) [%Y-%m-%d(%a) %H:%M]"
+set-option -g status-right '#[fg=white]#(wifi)#[default] #(battery --tmux) #[fg=white][%Y-%m-%d(%a) %H:%M]'
+
+# Reload statusbar
+set-option -g status-interval 1
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
