[tmux] クリップボードにもコピーするようにした

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -88,6 +88,13 @@ set-option -g status-left '#[fg=white]tmux:[#P]'
 set-option -g status-right "#(tmux show-options -g prefix) [%Y-%m-%d(%a) %H:%M]"
 set-option -g status-right '#[fg=white]#(wifi)#[default] #(battery --tmux) #[fg=white][%Y-%m-%d(%a) %H:%M]'
 
+# for OSX
+set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+
 # Reload statusbar
 set-option -g status-interval 1
 
