--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -14,4 +14,4 @@ jobs:
         install_url: https://github.com/nix-community/nix-unstable-installer/releases/download/nix-2.23.0pre20240603_da92ad7/install
         extra_nix_config: |
           experimental-features = nix-command flakes
-    - run: make fmt
+    - run: nix run nixpkgs#nixfmt-rfc-style -- -c .
