miseツールのバージョンを固定化

--- a/_mise.toml
+++ b/_mise.toml
@@ -1,17 +1,18 @@
 [tools]
-1password-cli = "latest"
-"aqua:goreleaser/goreleaser" = "latest"
-"aqua:suzuki-shunsuke/pinact" = "latest"
-gh = "latest"
-ghq = "latest"
-jq = "latest"
-lazydocker = "latest"
-node = "latest"
-"npm:@ast-grep/cli" = "latest"
-"npm:@augmentcode/auggie" = "latest"
-"npm:@charmland/crush" = "latest"
-"npm:@github/copilot" = "latest"
-"npm:@openai/codex" = "latest"
+"aqua:goreleaser/goreleaser" = "2.12.3"
+"aqua:suzuki-shunsuke/pinact" = "3.4.2"
+"npm:@ast-grep/cli" = "0.39.5"
+"npm:@augmentcode/auggie" = "0.5.6"
+"npm:@charmland/crush" = "0.10.2"
+"npm:@github/copilot" = "0.0.328"
+"npm:@openai/codex" = "0.42.0"
+1password-cli = "2.32.0"
+bun = "1.2.23"
+gh = "2.80.0"
+ghq = "1.8.0"
+jq = "1.8.1"
+lazydocker = "0.24.1"
+node = "24.9.0"
 
 [settings]
 experimental = true
