--- a/_mise.toml
+++ b/_mise.toml
@@ -1,10 +1,10 @@
 [tools]
-"aqua:goreleaser/goreleaser" = "2.12.3"
+"aqua:goreleaser/goreleaser" = "2.12.5"
 "aqua:suzuki-shunsuke/pinact" = "3.4.2"
 "npm:@ast-grep/cli" = "0.39.5"
-"npm:@augmentcode/auggie" = "0.5.6"
-"npm:@charmland/crush" = "0.10.2"
-"npm:@github/copilot" = "0.0.328"
+"npm:@augmentcode/auggie" = "0.5.7"
+"npm:@charmland/crush" = "0.10.4"
+"npm:@github/copilot" = "0.0.331"
 "npm:@openai/codex" = "0.42.0"
 1password-cli = "2.32.0"
 bun = "1.2.23"
@@ -13,8 +13,11 @@ ghq = "1.8.0"
 jq = "1.8.1"
 lazydocker = "0.24.1"
 node = "24.9.0"
+rust = "1.90.0"
+uv = "0.8.22"
 
 [settings]
 experimental = true
 lockfile = true
+idiomatic_version_file_enable_tools = []
 
