--- a/_mise.toml
+++ b/_mise.toml
@@ -6,13 +6,14 @@
 "npm:@charmland/crush" = "0.10.4"
 "npm:@github/copilot" = "0.0.339"
 "npm:@openai/codex" = "0.46.0"
+"npm:@anthropic-ai/claude-code" = "latest"
 1password-cli = "2.32.0"
 bun = "1.3.0"
 gh = "2.81.0"
 ghq = "1.8.0"
 jq = "1.8.1"
 lazydocker = "0.24.1"
-node = "24.9.0"
+node = "latest"
 rust = "1.90.0"
 uv = "0.9.2"
 
